--- a/roles/nginx-ssl/templates/site.conf.j2
+++ b/roles/nginx-ssl/templates/site.conf.j2
@@ -29,7 +29,7 @@ server {
 {% for user in users %}
 {% if groups.tag_role_control is defined %}
 {% for vm in groups.tag_role_control if vm in groups['tag_pod_' + user.username] %}
-    location /{{ user.username }} {
+    location /{{ hostvars[vm].hostname }} {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
