--- a/roles/generate-content/templates/instances.txt.j2
+++ b/roles/generate-content/templates/instances.txt.j2
@@ -4,29 +4,51 @@ ansible_ssh_pass={{ admin_password }}
 {% if ssh_port is defined %}
 ansible_port={{ ssh_port }}
 {% endif %}
-
 {% if groups.tag_role_cfme is defined %}
+
 [cfme]
 {% for vm in groups.tag_role_cfme if vm in groups['tag_pod_' + item.username] %}
 {{ hostvars[vm].hostname }} ansible_host={{ vm }}
 {% endfor %}
 {% endif %}
-
 {% if groups.tag_role_tower is defined %}
+
 [tower]
 {% for vm in groups.tag_role_tower if vm in groups['tag_pod_' + item.username] %}
 {{ hostvars[vm].hostname }} ansible_host={{ vm }}
 {% endfor %}
 {% endif %}
-
 {% if groups.tag_role_web is defined %}
+
 [web]
 {% for vm in groups.tag_role_web if vm in groups['tag_pod_' + item.username] %}
 {{ hostvars[vm].hostname }} ansible_host={{ vm }}
 {% endfor %}
 {% endif %}
+{% if groups.tag_role_windows_node is defined %}
 
+[windows]
+{% for vm in groups.tag_role_windows_node if vm in groups['tag_pod_' + user.username] %}
+{{ hostvars[vm].hostname }} ansible_host={{ vm }}
+{% endfor %}
+{% endif %}
+{% if groups.tag_role_windows_workstation is defined %}
+
+[windows_workstation]
+{% for vm in groups.tag_role_windows_workstation if vm in groups['tag_pod_' + user.username] %}
+{{ hostvars[vm].hostname }} ansible_host={{ vm }}
+{% endfor %}
+{% endif %}
+{% if groups.tag_role_windows is defined %}
+
+[windows:vars]
+ansible_connection=winrm
+ansible_winrm_transport=basic
+ansible_winrm_server_cert_validation=ignore
+ansible_port=5986
+{% endif %}
 {% if groups.tag_role_control is defined %}
+
 [control]
 {% for vm in groups.tag_role_control if vm in groups['tag_pod_' + item.username] %}
 {{ hostvars[vm].hostname }} ansible_host={{ vm }}
