--- a/roles/generate-content/templates/w1-ansible-tower-lb-index.html.j2
+++ b/roles/generate-content/templates/w1-ansible-tower-lb-index.html.j2
@@ -50,7 +50,7 @@ GITHUB for Ansible Lightbulb: <a href="https://github.com/ansible/lightbulb" tar
 
 
 <h4><a href="decks/ansible-essentials.html" target="new_1">DECK: Ansible Essentials</a><br></h4>
-<h4><a href="decks/intro-to-ansible-tower.html" target="new_2">DECK:  Intro To Tower</a><br></h4>
+<h4><a href="decks/intro-to-ansible-tower.html" target="new_2">DECK: Intro To Tower</a><br></h4>
 <h4><a href="http://ansible-workshop.redhatgov.io/standard/workshop/index.html" target="new_main">LAB GUIDE</a><br><br></h4>
 
 <hr>
@@ -64,11 +64,10 @@ wget http://releases.ansible.com/ansible-tower/setup/ansible-tower-setup-latest.
 </h3></pre>
 
 
-<!-- <h3><a href="https://www.ansible.com/license" target="new_2">
-Request Licensing page (Pick the second option: non-Enterprise version for immediate download):</a><br><br></h3>-->
+<h3><a href="https://www.ansible.com/workshop-license" target="new_2">Click here to request a license for the workshop (You will receive the key to your email)</a><br><br></h3>
 
 
-<h3><a href="http://ansible-workshop.redhatgov.io/workshop-files/ansible_tower_license.txt" target="new_gd_license">4-Node NFR Lightbulb license is available here</a><br><br></h3>
+<!--<h3><a href="http://ansible-workshop.redhatgov.io/workshop-files/ansible_tower_license.txt" target="new_gd_license">4-Node NFR Lightbulb license is available here</a><br><br></h3>-->
 
 <hr>
   </div>
