--- a/roles/generate-content/templates/w2-tower-cf-lb-index.html.j2
+++ b/roles/generate-content/templates/w2-tower-cf-lb-index.html.j2
@@ -65,11 +65,10 @@ wget http://releases.ansible.com/ansible-tower/setup/ansible-tower-setup-latest.
 </h3></pre>
 
 
-<!-- <h3><a href="https://www.ansible.com/license" target="new_2">
-Request Licensing page (Pick the second option: non-Enterprise version for immediate download):</a><br><br></h3>-->
+<h3><a href="https://www.ansible.com/workshop-license" target="new_2">Click here to request a license for the workshop (You will receive the key to your email)</a><br><br></h3>
 
 
-<h3><a href="http://ansible-workshop.redhatgov.io/workshop-files/ansible_tower_license.txt" target="new_gd_license">4-Node NFR Lightbulb license is available here</a><br><br></h3>
+<!--<h3><a href="http://ansible-workshop.redhatgov.io/workshop-files/ansible_tower_license.txt" target="new_gd_license">4-Node NFR Lightbulb license is available here</a><br><br></h3>-->
 
 <hr>
   </div>
